--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "react-router": "^3.2.0",
+    "redux": "^3.5.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
